# wock

./: .gitignore  LICENSE  flake.nix  hello.nock  index.html  sail.nock  script.js  sha256.c  softfloat.nix  urbit.hoon  vere.patch  wock.nock
dodrio/src/: node.rs
libaes_siv/include/: config.h
nock/: Cargo.toml  NOTES.md  TODO.md  bad.hoon  flake.nix  hello.hoon  hello.nock  one.hoon  one.nock  sail.hoon  test.hoon  wock.hoon  wock.nock
nock/res/: comb.nock  hoon-hoon-ast.nock  hoon.nock  make.nock  mint.nock  ream.nock  ride.nock  urbit.jam  wash.nock
nock/src/: cue.rs  hash-gate.rs  interpreter.rs  jam.rs  jets.rs  lib.rs  main.rs  noun.rs  serialization.rs
softfloat/: patch.diff
wock-web/: Cargo.toml  build.sh  event-payloads.md  hello.nock  index.html  script.mjs
wock-web/src/: lib.rs
