[package]
name = "nock"
version = "0.1.0"
authors = ["iko <mail@iko.soy>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
num-bigint = "0.4.6"
num-traits = "0.2.19"
bitter = "0.7.0"
num-integer = "0.1.46"
clap = { version = "4.5.16", features = ["derive"] }
spinoff = "0.8.0"
bit-vec = "0.8.0"
bitvec = "1.0.1"
stacker = "0.1.17"
murmur3 = "0.5.2"
web-sys = "0.3.70"
fplist = "0.2.1"

[dependencies.xxhash-rust]
version = "0.8.5"
features = ["xxh3"]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3

[[bin]]
name = "nock"
path = "src/main.rs"

[[bin]]
name = "hash-gate"
path = "src/hash-gate.rs"

