[package]
name = "wock-web"
version = "0.1.0"
authors = ["iko <mail@iko.soy>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
nock = { path = "../nock" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen-futures = "0.4.45"
js-sys = "0.3.72"
# dodrio = "0.2.0"
dodrio = { path = "../../dodrio" }

[dependencies.web-sys]
version = "0.3.72"
features = ['Headers', 'Request', 'RequestInit', 'RequestMode', 'Response', 'Window', 'Blob', 'Document', 'Element']

[dependencies.gloo]
version = "0.11.0"
features = ['utils']

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3

[package.metadata.wasm-pack.profile.dev]
wasm-opt = ["-O", "--enable-bulk-memory"]
